update my branch

--- a/html/make.html
+++ b/html/make.html
@@ -24,7 +24,7 @@
     <form>
         <div class="form-group">
             <label for="exampleFormControlInput1">Party Name</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="title" class="form-control" id="exampleFormControlInput1" placeholder="First Name">
         </div>
         <div class="form-group">
             <label for="exampleFormControlSelect1">Party Size</label>
@@ -36,21 +36,25 @@
             <option>5</option>
           </select>
         </div>
+        <br>
+        <br>
         <div class="form-group">
             <label for="exampleFormControlSelect2">Time</label>
             <select multiple class="form-control" id="exampleFormControlSelect2">
-            <option>12:00</option>
-            <option>1:00</option>
-            <option>2:00</option>
-            <option>3:00</option>
-            <option>4:00</option>
-            <option>5:00</option>
-            <option>6:00</option>
-            <option>7:00</option>
-            <option>8:00</option>
-            <option>9:00</option>
+            <option>12:00pm</option>
+            <option>1:00pm</option>
+            <option>2:00pm</option>
+            <option>3:00pm</option>
+            <option>4:00pm</option>
+            <option>5:00pm</option>
+            <option>6:00pm</option>
+            <option>7:00pm</option>
+            <option>8:00pm</option>
+            <option>9:00pm</option>
           </select>
         </div>
+        <br>
+        <br>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Special Accommodations? </label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
