--- a/html/home.html
+++ b/html/home.html
@@ -28,8 +28,8 @@
     <br>
     <br>
     <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-secondary">View Tables</button>
-        <button type="button" class="btn btn-secondary">Make Reservation</button>
+        <button type="button" class="btn btn-secondary"><a href=view.html>Tables</a></button>
+        <button type="button" class="btn btn-secondary"><a href="make.html">Make Reservation</a></button>
     </div>
 </body>
 
