update html features

--- a/html/home.html
+++ b/html/home.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <H1>Welcome to Hot Restaurant!</H1>
+    <H1><a href="home.html">Welcome to Hot Restaurant!</a></H1>
     <h3>Make Yourself a Reservation Below!</h3>
     <br>
     <br>
