--- a/html/view.html
+++ b/html/view.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <H1>Welcome to Hot Restaurant!</H1>
+    <H1><a href="home.html">Welcome to Hot Restaurant!</a></H1>
     <br>
     <br>
 </body>
