--- a/html/make.html
+++ b/html/make.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <H1>Welcome to Hot Restaurant!</H1>
+    <H1><a href="home.html">Welcome to Hot Restaurant!</a></H1>
     <br>
     <br>
     <form>
@@ -34,6 +34,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <br>
